Fix the logo overlapping around 768px wide viewports

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,3 +1,5 @@
+/* Sticky footer: https://codepen.io/chriscoyier/pen/RRbKrL */
+
 html
   height: 100%
   
@@ -5,8 +7,6 @@ body
   height: 100vh
   display: flex
   flex-direction: column
-  
-/* Sticky footer: https://codepen.io/chriscoyier/pen/RRbKrL */
 
 .footer
   font: 14px Cairo;
@@ -16,10 +16,6 @@ body
 .things
   padding: 15px
   flex: 1 0 auto;
-
-@media only screen and (min-width: 768px)
-  .column1
-    padding: 10% 40px 0 0;
 
 .title
   font: 100px/0.7 Chakra Petch, arial, sans-serif;
@@ -33,6 +29,27 @@ body
   font: 20px/1.25 Cairo, arial, sans-serif;
   text-align: justify;
   text-justify: inter-word
+
+.subtitle
+  font: 32px/1.3 Chakra Petch, arial, sans-serif;
+  text-align: center;
+
+.projectTitle
+  font: 26px/1 Cairo, arial, sans-serif;
+  font-weight: bold;
+
+.projects
+  font: 20px/1.3 Cairo, arial, sans-serif;
+  text-align: justify;
+  text-justify: inter-word
+
+@media only screen and (min-width: 769px) and (max-width: 815px)
+  .title
+    font: 85px/0.7 Chakra Petch, arial, sans-serif;
+
+@media only screen and (min-width: 768px)
+  .column1
+    padding: 10% 40px 0 0;
 
 @media only screen and (max-width: 420px)
   .title
@@ -57,19 +74,6 @@ body
     float: left;
   body
     padding: 25px;
-
-.subtitle
-  font: 32px/1.3 Chakra Petch, arial, sans-serif;
-  text-align: center;
-
-.projectTitle
-  font: 26px/1 Cairo, arial, sans-serif;
-  font-weight: bold;
-
-.projects
-  font: 20px/1.3 Cairo, arial, sans-serif;
-  text-align: justify;
-  text-justify: inter-word
 
 // Game Boy Animation (Compiled with Compass/CSS3)
 
